testdata/baselines/reference/submodule/compiler/jsFileCompilationTypeParameterSyntaxOfFunction.errors.txt
a.js(1,10): error TS8004: Type parameter declarations can only be used in TypeScript files.


==== a.js (1 errors) ====
    function F<T>() { }
             ~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.